# ACrossR

./: .gitignore  .gitmodules  ACross.qmlproject  ACross.qmlproject.qtds  CMakeLists.txt  README.md  package.json  qmlcomponents  qmlmodules
.github/workflows/: msvc-build.yaml
asset_imports/: asset_imports.txt
cmake/: qrc.cmake
content/: AboutPage.qml  AcrossCpp.qml  App.qml  CMakeLists.txt  CardGrid.qml  CustomButton.qml  CxxObject.qml  Dashboard.qml  Fab.qml  GroupCard.ui.qml  GroupIcon.qml  GroupModelExample.qml  GroupPage.qml  GroupPageDrawer.qml  HelpPage.qml  HomePage.qml  HomePageCard.qml  HomePageDrawer.qml  LogsPage.qml  MainPanelButton.qml  NodeCard.ui.qml  NodeModelExample.qml  RoutePage.qml  StartButton.ui.qml
content/fonts/: fonts.txt
i18n/: across_zh_CN.ts
imports/: CMakeLists.txt
imports/ACross/: CMakeLists.txt  Colors.qml  Constants.qml  qmldir
imports/ACross/designer/: plugin.metainfo
misc/: across.proto  across_example.json
pkgbuild/arch/across/: .SRCINFO  PKGBUILD
pkgbuild/arch/across-dev-git/: .SRCINFO  PKGBUILD
pkgbuild/msys2/across/: PKGBUILD
pkgbuild/msys2/across-dev-git/: PKGBUILD
src/: app.cpp  app.h  groupmodel.cpp  groupmodel.h  import_qml_plugins.h  main.cpp
src/cpp/: across.cpp  across.h  app.cpp  groupmodel.cpp  groupmodel.h  main.cpp  nodemodel.cpp  nodemodel.h
src/models/: acolorstools.cpp  acolorstools.h  apitools.cpp  apitools.h  confighelper.cpp  coretools.cpp  dbtools.h  networktools.cpp  networktools.h  serializetools.cpp
src/qml/: across.cpp  across.h  app.cpp  app.h  groupmodel.h  main.cpp  nodemodel.h
src/rust/: Cargo.toml  build.rs
src/rust/components/core_protobuf/: Cargo.toml  build.rs
src/rust/components/core_protobuf/src/: lib.rs
src/rust/components/utils/: Cargo.toml
src/rust/components/utils/src/: net.rs
src/rust/src/: acolors_process.rs  across_rpc.rs  convert.rs  lib.rs  profile.rs  qml_process.rs  runtime.rs  test_fun.rs
src/rust/src/ffi/: acolors.rs  init.rs  mod.rs  profile.rs  qml_process.rs
src/rust/src/tests/: mod.rs  test_fun.rs
src/tray/: across.cpp  across.h  main.cpp  qmlprocess.cpp  qmlprocess.h  tray.cpp  tray.h
src/view_models/: buildinfo.h.in  configtools.cpp  configtools.h  grouplist.cpp  groupmodel.cpp  nodeformmodel.cpp  nodelist.cpp  nodelist.h  notificationmodel.cpp  notificationmodel.h
src/views/home/: CurrentPanel.qml  NodeItemCard.qml
src/views/menu/: ApiForm.qml  InfoItem.qml
src/views/setting/: AColoRSItem.qml  CoreItem.qml  SettingPage.qml
src/views/typescripts/: home.js  home.ts
