[package]
name = "across-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
tokio = { version = "1.18", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "signal",
] }
tonic = "0.9.2"
prost = "0.11"
prost-types = "0.11"
cxx = "1.0"
lazy_static = "1.0"
anyhow = "1.0"

[build-dependencies]
tonic-build = "0.9.2"
