[package]
name = "across-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[workspace]
members = ["components/core_protobuf", "components/utils"]

[dependencies]
tokio = { version = "1.18", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "signal",
    "process",
] }
tonic = "0.10.2"
prost = "0.12"
prost-types = "0.12"
cxx = "1.0"
lazy_static = "1.0"
anyhow = "1.0"
core_protobuf = { path = "components/core_protobuf" }
utils = { path = "components/utils" }
serde = "1.0"
serde_json = "1.0"
directories = "5.0"
http = "*"

[dev-dependencies]
core_protobuf = { path = "components/core_protobuf" }
rand = "0.8"
lazy_static = "1.0"
serial_test = "2.0"

[build-dependencies]
tonic-build = "0.10.2"
